// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`(optimized) transpiles external stylesheets (CommonJS modules) 1`] = `
"const _defaultExport = ['div{font-size:3em;}'];
_defaultExport.__hash = '761548770';
_defaultExport.__scoped = ['div.jsx-3720287939{font-size:3em;}'];
_defaultExport.__scopedHash = '3720287939';


module.exports = _defaultExport;"
`;

exports[`(optimized) transpiles external stylesheets 1`] = `
"

const color = 'red';

const bar = ['div{font-size:3em;}'];
bar.__hash = '761548770';
bar.__scoped = ['div.jsx-3720287939{font-size:3em;}'];
bar.__scopedHash = '3720287939';
export const uh = bar;

export const foo = [\`div{color:\${color};}\`];

foo.__hash = '3319550427';
foo.__scoped = [\`div.jsx-3980805466{color:\${color};}\`];
foo.__scopedHash = '3980805466';
const _defaultExport = ['div{font-size:3em;}', \`p{color:\${color};}\`];
_defaultExport.__hash = '392586103';
_defaultExport.__scoped = ['div.jsx-311488054{font-size:3em;}', \`p.jsx-311488054{color:\${color};}\`];
_defaultExport.__scopedHash = '311488054';
export default _defaultExport;"
`;

exports[`does not transpile non-styled-jsx tagged teplate literals 1`] = `
"import css from 'hell';

const color = 'red';

const bar = css\`
  div {
    font-size: 3em;
  }
\`;
export const uh = bar;

export const foo = css\`div { color: \${color}}\`;

export default css\`
  div {
    font-size: 3em;
  }
  p {
    color: \${color};
  }
\`;

const Title = styled.h1\`
  color: red;
  font-size: 50px;
\`;

const AnotherTitle = Title.extend\`color: blue;\`;

export const Component = () => <AnotherTitle>My page</AnotherTitle>;"
`;

exports[`transpiles external stylesheets (CommonJS modules) 1`] = `
"const _defaultExport = new String('div{font-size:3em}');

_defaultExport.__hash = '761548770';
_defaultExport.__scoped = 'div.jsx-3720287939{font-size:3em}';
_defaultExport.__scopedHash = '3720287939';


module.exports = _defaultExport;"
`;

exports[`transpiles external stylesheets 1`] = `
"

const color = 'red';

const bar = new String('div{font-size:3em}');
bar.__hash = '761548770';
bar.__scoped = 'div.jsx-3720287939{font-size:3em}';
bar.__scopedHash = '3720287939';
export const uh = bar;

export const foo = new String(\`div{color:\${color}}\`);

foo.__hash = '3319550427';
foo.__scoped = \`div.jsx-3980805466{color:\${color}}\`;
foo.__scopedHash = '3980805466';

const _defaultExport = new String(\`div{font-size:3em}p{color:\${color}}\`);

_defaultExport.__hash = '392586103';
_defaultExport.__scoped = \`div.jsx-311488054{font-size:3em}p.jsx-311488054{color:\${color}}\`;
_defaultExport.__scopedHash = '311488054';
export default _defaultExport;"
`;

exports[`use external stylesheets (global only) 1`] = `
"import _JSXStyle from 'styled-jsx/style';
import styles, { foo as styles3 } from './styles';

const styles2 = require('./styles2');

export default (() => <div>
    <p>test</p>
    <div>woot</div>
    <p>woot</p>
    <_JSXStyle styleId={styles2.__hash} css={styles2} />
    <_JSXStyle styleId={styles3.__hash} css={styles3} />
    <_JSXStyle styleId={styles.__hash} css={styles} />
  </div>);"
`;

exports[`use external stylesheets (multi-line) 1`] = `
"import _JSXStyle from 'styled-jsx/style';
import styles from './styles';

export default (() => <div className={\`jsx-\${styles.__scopedHash}\`}>
    <p className={\`jsx-\${styles.__scopedHash}\`}>test</p>
    <_JSXStyle styleId={styles.__scopedHash} css={styles.__scoped} />
  </div>);"
`;

exports[`use external stylesheets 1`] = `
"import _JSXStyle from 'styled-jsx/style';
import styles from './styles';
const styles2 = require('./styles2');
import { foo as styles3 } from './styles';

export default (() => <div className={'jsx-1646697228 ' + \`jsx-\${styles3.__scopedHash} jsx-\${styles.__scopedHash}\`}>
    <p className={'jsx-1646697228 ' + \`jsx-\${styles3.__scopedHash} jsx-\${styles.__scopedHash}\` + ' ' + 'foo'}>test</p>
    <p className={'jsx-1646697228 ' + \`jsx-\${styles3.__scopedHash} jsx-\${styles.__scopedHash}\`}>woot</p>
    <_JSXStyle styleId={styles2.__hash} css={styles2} />
    <_JSXStyle styleId={styles3.__scopedHash} css={styles3.__scoped} />
    <div className={'jsx-1646697228 ' + \`jsx-\${styles3.__scopedHash} jsx-\${styles.__scopedHash}\`}>woot</div>
    <_JSXStyle styleId={\\"1646697228\\"} css={\\"p.jsx-1646697228{color:red}div.jsx-1646697228{color:green}\\"} />
    <_JSXStyle styleId={styles.__scopedHash} css={styles.__scoped} />
  </div>);

export const Test = () => <div className={'jsx-1646697228 ' + \`jsx-\${styles3.__scopedHash}\`}>
    <p className={'jsx-1646697228 ' + \`jsx-\${styles3.__scopedHash}\` + ' ' + 'foo'}>test</p>
    <p className={'jsx-1646697228 ' + \`jsx-\${styles3.__scopedHash}\`}>woot</p>
    <_JSXStyle styleId={styles3.__scopedHash} css={styles3.__scoped} />
    <div className={'jsx-1646697228 ' + \`jsx-\${styles3.__scopedHash}\`}>woot</div>
    <_JSXStyle styleId={\\"1646697228\\"} css={\\"p.jsx-1646697228{color:red}div.jsx-1646697228{color:green}\\"} />
  </div>;"
`;
